# imessage

./: .gitignore  LICENSE  README.md  conf.py  index.html  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: documentation.yml  kabbes_smart_documentation.yml
_build/doctrees/: environment.pickle  index.doctree  mac_imessage.doctree  modules.doctree
docs/: .buildinfo  genindex.html  index.html  mac_imessage.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/mac_imessage/: exceptions.html  utils.html
docs/_sources/: index.rst.txt  mac_imessage.rst.txt  modules.rst.txt
docs/_static/: basic.css
sphinx/: Makefile  conf.py  index.rst
src/imessage/: Message.py  PhoneNumber.py  __init__.py  __main__.py  imessage_params.py  imessage_support_functions.py  main.py  send_imessage.applescript  send_sms.applescript
src/kabbes_imessage/: Message.py  Messages.py  PhoneNumber.py  PhoneNumbers.py  __init__.py  __main__.py  exceptions.py  utils.py
src/kabbes_imessage/message_mediums/: SMS.applescript  iMessage.applescript
src/mac_imessage/: __init__.py  __main__.py  custom_types.py  exceptions.py  utils.py
src/pyimessage/: __init__.py  __main__.py  utils.py
