[metadata]
name = kabbes_imessage
version = 0.1.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Python tools for sending iMessages on a Mac
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-imessage/
project_urls =
    GitHub = https://github.com/jameskabbes/imessage
    Documentation = https://jameskabbes.github.io/imessage
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src